--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="{{ locale_name }}">
+<html class="no-js test-frontdev" lang="{{ locale_name }}">
     <head>
         <title>{{ head.title }}</title>
         {{{ resourceHints }}}
