05-30-Page Template add class

--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -2,7 +2,7 @@
 
 {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 
-<section class="page cms_page">
+<section class="page cms_page test-class">
     {{#unless theme_settings.hide_page_heading }}
         <h1 class="page-heading">{{ page.title }}</h1>
     {{/unless}}
